A Bunch of Ukraine Cities for no obvious reason :trollface:

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -251,6 +251,22 @@
  VICTORY_POINTS_3580:0 "Kursk"
  VICTORY_POINTS_3653:0 "Batumi"
  VICTORY_POINTS_3672:0 "Grozny"
+ VICTORY_POINTS_6727:0 "Bélgorod-Dnestróvskiy"
+ VICTORY_POINTS_3707:0 "Kishinev"
+ VICTORY_POINTS_3755:0 "Kherson"
+ VICTORY_POINTS_6593:0 "Schitomir"
+ VICTORY_POINTS_3568:0 "Tschernigow"
+ VICTORY_POINTS_11504:0 "Poltawa"
+ VICTORY_POINTS_11546:0 "Nikolajew"
+ VICTORY_POINTS_3520:0 "Sumy"
+ VICTORY_POINTS_13265:0 "Mariupol"
+ VICTORY_POINTS_6741:0 "Kertsch"
+ VICTORY_POINTS_11561:0 "Por Kriwoi Rog"
+ VICTORY_POINTS_719:0 "Noworossiysk"
+ VICTORY_POINTS_476:0 "Winniza"
+ VICTORY_POINTS_488:0 "Cherkasy"
+ VICTORY_POINTS_3452:0 "Kropywnyzkyj"
+ VICTORY_POINTS_9451:0 "Uman"
  VICTORY_POINTS_3686:0 "Sevastopol"
  VICTORY_POINTS_3720:0 "Maikop"
  VICTORY_POINTS_4724:0 "Krasnoyarsk"
@@ -635,7 +651,6 @@
  VICTORY_POINTS_12991:0 "Mogadíscio"
  VICTORY_POINTS_6318:0 "Manchester"
  VICTORY_POINTS_11405:0 "Zaporizhia"
- VICTORY_POINTS_11561:0 "Krivoi Rih"
  VICTORY_POINTS_9461:0 "Luhansk"
  VICTORY_POINTS_3734:0 "Krasnodar"
  VICTORY_POINTS_11349:0 "Rzhev"
