A BUNCH of Random Stuff

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -671,6 +671,9 @@
  VICTORY_POINTS_1875:0 "Chungkaske"
  VICTORY_POINTS_10595:0 "Ingyang Okablecha"
  VICTORY_POINTS_3916:0 "Erbil"
+ VICTORY_POINTS_12044:0 "Assiut"
+ VICTORY_POINTS_12071:0 "Luxor"
+ VICTORY_POINTS_11999:0 "Aswan"
  VICTORY_POINTS_12333:0 "Ashgabat"
  VICTORY_POINTS_12250:0 "Dushanbe"
  VICTORY_POINTS_7193:0 "Nicosia"
@@ -743,6 +746,7 @@
  VICTORY_POINTS_620:0 "Limoges"
  VICTORY_POINTS_11699:0 "Pau"
  VICTORY_POINTS_11877:0 "Nimes"
+ VICTORY_POINTS_7219:0 "Neu Wien"
  VICTORY_POINTS_958:0 "Avignon"
  VICTORY_POINTS_6786:0 "Saint-Etienne"
  VICTORY_POINTS_9593:0 "Clermont-Ferrand"
