Quality of Life Changes

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -955,6 +955,11 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.151.a:0 "Help is on the way."
   germany.151.b:0 "I thought it was only a small rebellion?."
 
+  germany.152.t:0 "Germany asks to purchase Ashanti"
+  germany.152.d:0 "The United Kingdoms of Germany have come towards us with the offer of purchasing our crown colony Ashanti. It appears that the Germans intent do strenghten their colonial position in West Africa and want to connect their colonies. They are offering a very high sum of money for the purchase of the colony and assure us that this is not a move to weaken British Global Power.\nThe Government is conflicted about this proposal. For some it is inconceivable that even an inch of the Empire should be given up, while other parties consider the offer to be quite attractive especially looking at the current economic situation.\nThe sale of  the small colony might help the economy and people of the British World but are we not the Empire on which the sun never set?"
+  germany.152.a:0 "We are in a dire need of few new pounds."
+  germany.152.b:0 "The British Empire will not decline in size!"
+
   germany.180.t:0 "German Africa - A continent of Opportunities"
   germany.180.d:0 ""
   germany.180.a:0 "We have to stand together against the oncoming storm."
