One peace deal done

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -2154,3 +2154,28 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   PHI_Free_Independent_ds_ADJ:0 "Filipino"
   PHI_Free_Independent_cn_ADJ:0 "Filipino"
   PHI_Free_Independent_an_ADJ:0 "Filipino"
+
+  HUN_Transleithania_ni:0 "Transleithania"
+  HUN_Transleithania_ni_DEF:0 "The Transleithania"
+  HUN_Transleithania_ds:0 "Transleithania"
+  HUN_Transleithania_ds_DEF:0 "The Transleithania"
+  HUN_Transleithania_rc:0 "Transleithania"
+  HUN_Transleithania_rc_DEF:0 "The Transleithania"
+  HUN_Transleithania_an:0 "Transleithania"
+  HUN_Transleithania_an_DEF:0 "The Transleithania"
+  HUN_Transleithania_cn:0 "Transleithania"
+  HUN_Transleithania_cn_DEF:0 "The Transleithania"
+  HUN_Transleithania_lb:0 "Transleithania"
+  HUN_Transleithania_lb_DEF:0 "The Transleithania"
+  HUN_Transleithania_ss:0 "Transleithania"
+  HUN_Transleithania_ss_DEF:0 "The Transleithania"
+  HUN_Transleithania_jc:0 "Transleithania"
+  PHI_Transleithania_jc_DEF:0 "The Transleithania"
+  PHI_Transleithania_ni_ADJ:0 "Transleithanian"
+  PHI_Transleithania_rc_ADJ:0 "Transleithanian"
+  PHI_Transleithania_lb_ADJ:0 "Transleithanian"
+  PHI_Transleithania_ss_ADJ:0 "Transleithanian"
+  PHI_Transleithania_jc_ADJ:0 "Transleithanian"
+  PHI_Transleithania_ds_ADJ:0 "Transleithanian"
+  PHI_Transleithania_cn_ADJ:0 "Transleithanian"
+  PHI_Transleithania_an_ADJ:0 "Transleithanian"
