More Germany Stuff and Fixed Topbar Issues

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -1254,6 +1254,8 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
 
   french_austra_tension:0 "Rising Tensions in the §YRepublic of Australie§!"
 
+  ger_war_economy_begins:0 "§RThe Idea of Total War has been adopted§!"
+
   GER_Vienna_Capital:0 "§GThe Capital of the New Germany will rightfully be Vienna!§!"
   
   PB_GER_TT_Centralization:0 "The effects of §RUnrest§! in the Volksstaten will be §Greduced.§! "
