Peace deal work

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -624,6 +624,10 @@
   PBNews.159.d:0 "As diplomatic channels failed to resolve the Ukrainian Crisis, the League of Nations Executive Committee passed a resolution permitting a military intervention in Ukraine. The situation has proven to be one of the first immediate challenges to the new international order and some claimed Ukraine would be the death of the organization. As International forces cross into the conflict zone, it seems that the League has challenged those ideas.\n\nBoth Bandera and Makhno have condemned the intervention, vowing to repel the international expeditionary force by any means necessary."
   PBNews.159.a:0 "We'll show them our peaceful ways, by force!"
 
+  PBNews.160.t:0 "TRANSLEITHANIA PROCLAIMED"
+  PBNews.160.d:0 "German soldiers layed a decisive siege today in the city of Budapest, with many remaining Hungarian political members falling under enemy occupation and being rendered virtually useless in the management of the remaining Hungarian countryside. Small arms fire can still be heard amongst the city walls, however most, if not all of the standing Hungarian army have layed down arms and have accepted the proposed German peace terms. Hungary, a nation that hasn't been occupied by a german soverign state in almost a century has once again found itself a puppet to its former masters within the Danube."
+  PBNews.160.a:0 "What is to be of Hungary's future now?"
+
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
