Just gotta add the Peace deals for Italy and then this shit is done

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -628,6 +628,14 @@
   PBNews.160.d:0 "German soldiers layed a decisive siege today in the city of Budapest, with many remaining Hungarian political members falling under enemy occupation and being rendered virtually useless in the management of the remaining Hungarian countryside. Small arms fire can still be heard amongst the city walls, however most, if not all of the standing Hungarian army have layed down arms and have accepted the proposed German peace terms. Hungary, a nation that hasn't been occupied by a german soverign state in almost a century has once again found itself a puppet to its former masters within the Danube."
   PBNews.160.a:0 "What is to be of Hungary's future now?"
 
+  PBNews.161.t:0 "ITALY JOINS THE PACTE"
+  PBNews.161.d:0 "Gabriele D'Annunzio has officially proclaimed the Italian Social Republic's entry into the French spearheaded military alliance, the Pacte Revanchiste. He claimed in front of a major press and citizen audience that this would mark the first of many steps into re-building Italy from the horrors of the Italian Civil War. The British and German ambassadors in Italy did not comment on the matter however analysists believe that this outcome has sent a deep shockwave into the Imperial Powers who were relying on Italy and Germany to do most of the 'busy work' should a continental war break out."
+  PBNews.161.a:0 "The Italian Peninsula sleeps under watchful eyes"
+
+  PBNews.162.t:0 "ITALY SIDES WITH THE UK"
+  PBNews.162.d:0 "Ferdinand III has proclaimed the Italian entry into the British spearheaded military alliance, the Imperial Powers. Ferdinand has cited French aggression against the Italian peoples prior and during the civil war as the primary reason for Italy joining the British faction. The French ambassador left Italy today stating that the true Italian government was under German-British occupation and that ".. the time would soon come for Italy's liberation from these foreign forces". The British minister of defence called out the hypocrisy of such a statment and pointed towards the fact that France was the main party to instigate the Italian civil war."
+  PBNews.162.a:0 "The Italian Peninsula sleeps under watchful eyes"
+
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
