No more random embassies in colonial America

--- a/localisation/english/core_l_english.yml
+++ b/localisation/english/core_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ PB_Diplomacy_Block:0 "§RDiplomatic efforts have been disabled in Pax to avoid AI fuckery.§!"
  SEPARATION_LINE:0 "--------------\n"
  MENU_MESSAGES_DISABLE_ALL:0 "Disable all"
  FILTER:0 "Filter"
