game rules for france does this work

--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -1,5 +1,14 @@
 ﻿  l_english:
 
+  ###GAME RULES
+  RULE_OPTION_FRA_MAURRAS_PATH:0 "A Bourbon Restoration"
+  RULE_OPTION_FRA_MAURRAS_PATH_DESC:0 ""
+
+  RULE_OPTION_FRA_DOIROT_PATH:0 "Doirot Seizes Total Control"
+  RULE_OPTION_FRA_DOIROT_PATH_DESC:0 ""
+
+  RULE_OPTION_FRA_ARMAND_PATH:0 "Armand Takes The Reigns"
+  RULE_OPTION_FRA_ARMAND_PATH_DESC:0 ""
   ##########################
   # PACTE DE UNITY
   ##########################
