German game rules

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -1,5 +1,14 @@
 ﻿l_english:
 
+  ###GAME RULES
+  RULE_OPTION_GER_ELIZABETH_PATH:0 "The Red Diachy"
+  RULE_OPTION_GER_ELIZABETH_PATH_desc:0 ""
+
+  RULE_OPTION_GER_LIBERAL_PATH:0 "The Liberal Leap Forward"
+  RULE_OPTION_GER_LIBERAL_PATH_desc:0 ""
+
+  RULE_OPTION_GER_REVANCHIST_PATH:0 "A Revanchist Germany"
+  RULE_OPTION_GER_REVANCHIST_PATH_desc:0 ""
   ##########################
   # MINISTERS
   ##########################
