British Game Rules

--- a/localisation/english/PB_Game_Rules_l_english.yml
+++ b/localisation/english/PB_Game_Rules_l_english.yml
@@ -6,3 +6,4 @@
  PB_FRENCH_PATH_CHOICE:0 "@FRA French AI Strategy"
  PB_FRENCH_PATH_CHOICE:0 "@FRA French AI Strategy"
  PB_GERMAN_PATH_CHOICE:0 "@GER German AI Strategy"
+ PB_BRITISH_PATH:0 "@ENG British AI Strategy"
