--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -125,6 +125,7 @@
   GER_Unrest_Event_Timeout:0 "Unrest Event Timer"
   PB_GER_Political_Violence_Timeout:0 "Political Violence Event Timer"
   PB_GER_Rifle_Standardization:0 "Standardized Rifle Production"
+  PB_GER_Mech_Keitel:0 "Automat Standardization"
   PB_GER_Entrenchment_Idea:0 "Entrenchment Doctrine"
   PB_GER_More_Dakka:0 "Increased Landship Production Quotas"
   PB_GER_Oil_Focus:0 "Exploitation of Oil Concerns"
@@ -147,6 +148,12 @@
 
   PB_GER_Nuclear_Death:0 "Close to the Great Light"
   PB_GER_Nuclear_Death_desc:0 ""
+  
+  PB_GER_Ashanti_Purchase:0 "Costs of Ashanti"
+  PB_GER_Ashanti_Purchase_desc:0 "Costs of Ashanti"
+
+  PB_GER_Ashanti_Reward:0 "Profits from Ashanti"
+  PB_GER_Ashanti_Reward_desc:0 "Profits from Ashanti"
 
   PB_GER_Europa_Spies:0 "Europa Abteilung"
   Hamburg_Membership:0 "Hamburg Membership"
@@ -990,7 +997,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.152.a:0 "We are in a dire need of few new pounds."
   germany.152.b:0 "The British Empire will not decline in size!"
 
-  germany.180.t:0 "German Africa - A continent of Opportunities"
+  germany.180.t:0 "German Africa - A Continent of Opportunities"
   germany.180.d:0 ""
   germany.180.a:0 "We have to stand together against the oncoming storm."
 
