almost forgot to push my load

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -687,6 +687,7 @@
  VICTORY_POINTS_4980:0 "Macapá"
  VICTORY_POINTS_2219:0 "Lievelde"
  VICTORY_POINTS_6217:0 "Izhevsk"
+ VICTORY_POINTS_11136:0 "Aberdeen"
  VICTORY_POINTS_8051:0 "Doha"
  VICTORY_POINTS_12702:0 "Dammam"
  VICTORY_POINTS_5037:0 "Mecca"
