German exile tree work

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -214,6 +214,15 @@
   state_restricts_the_military_spirit:0 "Restricted Military"
   state_restricts_the_military_spirit_desc:0 "The modern militaries are becoming more extremist and political active by the day. In our neighbouring countries large portions of the military orchestrated coups and helped dangerous regimes. For the safety of the state, the military must be kept in check."
   
+  PB_GER_Our_Darkest_Hour:0 "Our Darkest Hour"
+  PB_GER_Our_Darkest_Hour_2:0 "Our Darkest Hour"
+  PB_GER_Our_Darkest_Hour_3:0 "Our Darkest Hour"
+  PB_GER_Central_African_Bush_War:0 "Central African Bush War"
+  PB_GER_Our_Darkest_Hour_4:0 "Our Darkest Hour"
+  PB_GER_Our_Darkest_Hour_5:0 "Our Darkest Hour"
+  PB_GER_Cheap_Rifles:0 "Cheap Rifles"
+  PB_GER_Our_Darkest_Hour_6:0 "Our Darkest Hour"
+  PB_GER_Our_Darkest_Hour_7:0 "Our Darkest Hour"
 
   ##########################
   # FOCUSES
@@ -744,7 +753,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.23.d:0 ""
   germany.23.a:0 "This can't go on much longer."
 
-  germany.24.t:0 "The Munich Coup"
+  germany.24.t:0 "The Munich Coup" # not used currently
   germany.24.d:0 ""
   germany.24.a:0 "Signal the French that we are willing to surrender"
 
@@ -752,7 +761,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.25.d:0 ""
   germany.25.a:0 "The remaking of Europe has begun."
 
-  germany.26.t:0 "Retreat from the Fatherland"
+  germany.26.t:0 "Retreat from the Fatherland" # not currently used
   germany.26.d:0 ""
   germany.26.a:0 "We will reclaim our birthright, whatever the cost may be."
 
@@ -1034,7 +1043,20 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.182.t:0 ""
   germany.182.d:0 ""
   germany.182.a:0 "Africa is our future."
-  germany.182.a:0 "Reinforce the Pacific."
+  germany.182.b:0 "Reinforce the Pacific."
+
+  ##########################
+  # GERMANY EXILE EVENTS
+  ##########################
+
+  germany_exile.1.t:0 "Our Darkest Hour"
+  germany_exile.1.d:0 ""
+  germany_exile.1.a:0 "We will return to the Fatherland, no matter the cost"
+
+  germany_exile.2.t:0 "Germany offers us an alliance"
+  germany_exile.2.d:0 ""
+  germany_exile.2.a:0 "I see no reason why we shouldn't accept"
+
 
 
   ##########################
@@ -1103,6 +1125,10 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
 
   PB_GER_Invite_Wallonia_to_Hamburg:0 "Invite [WLA.GetFlag]Wallonia to join the League"
   PB_GER_Invite_Wallonia_to_Hamburg_desc:0 ""
+
+  PB_GER_Exile_Decisions:0 "Reclaiming the Fatherland"
+  PB_GER_Search_For_Weapons:0 "Search for Weapons"
+  PB_GER_Reclaim_The_Fatherland:0 "Reclaim The Fatherland"
   
 
   ##########################
@@ -1366,6 +1392,8 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
 
   PB_GER_Elections_Planned:0 "§YNew Elections have been scheduled for 1933§!"
 
+  GER_PEF_LIBERATION_FRONT:0 "European Liberation Front"
+
   ##########################
   # COSMETIC TAGS
   ##########################
@@ -1440,7 +1468,7 @@ HamburgLeag_research_name:0 "Vienna Research Collaboration"
 HamburgLeag_research_desc:0 "The Vienna Research Collaboration was founded in Nürnberg Germany with the intent to share technological discoveries and continue to advance them together for the good of humanity."
 
 
-##dont let bernie see this
+##dont let bernie see this # I did, slut
 generic.20.t:0 "[From.GetNameDefCap] Demands Our Submission"
  generic.20.d_friends:0 "We received a delegation today expressing [From.GetLeader]'s interest in extending the relations between our countries and taking steps to unite the [Root.GetAdjective] people together with [From.GetNameDef]. Agreeing to [From.GetLeader]'s proposal would make [Root.GetNameDef] a moderately autonomous puppet of [From.GetNameDef] and our government will be reorganized into something more in line with [From.GetLeader]'s vision.\n\nThe question remains, is [Root.GetAdjective] independence more important than our friendship with [From.GetNameDef]?"
  generic.20.d_enemies:0 "A message arrived from [From.GetNameDef] today demanding that [Root.GetLeader] recognizes [From.GetLeader] as head of state and that our nation should be reorganized into something more in line with the [From.GetAdjective] government's vision for [Root.GetNameDef]. Accepting would make us a puppet of [From.GetNameDef].\n\nThough we would rather not surrender our independence to our enemies across the border, there's a definite element of threat in their message that would lead us to believe that if we do not meet [From.GetLeader]'s demands, we will soon find ourselves in a state of war with [From.GetNameDef]."
@@ -1453,3 +1481,6 @@ generic.20.t:0 "[From.GetNameDefCap] Demands Our Submission"
  generic.22.t:0 "[From.GetNameDefCap] Defiant!"
  generic.22.d:0 "Diplomats from [From.GetNameDef] arrived today to announce that they decline our offer to unite [From.GetNameDef] with [Root.GetNameDef]. Disappointing as it may be, the option to bring [From.GetNameDef] to heel by force remains a valid and tempting option."
  generic.22.a:0 "Disappointing."
+
+ #country flags
+ GER_IN_EXILE:0 "Germany is in exile"
