--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -636,6 +636,14 @@
   PBNews.162.d:0 "Ferdinand III has proclaimed the Italian entry into the British spearheaded military alliance, the Imperial Powers. Ferdinand has cited French aggression against the Italian peoples prior and during the civil war as the primary reason for Italy joining the British faction. The French ambassador left Italy today stating that the true Italian government was under German-British occupation and that ".. the time would soon come for Italy's liberation from these foreign forces". The British minister of defence called out the hypocrisy of such a statment and pointed towards the fact that France was the main party to instigate the Italian civil war."
   PBNews.162.a:0 "The Italian Peninsula sleeps under watchful eyes"
 
+  PBNews.163.t:0 "GERMAN-PORTUGUESE BUSH WAR"
+  PBNews.163.d:0 "It seems the German government in exile has decided to exploit the precarious situation of the Portuguese exiles by declaring a swift invasion of the rump state. Little news has come out from the conflict as of so now but analysists believe that the Germans are trying to gain a more permanent  foothold on the Africian continent in their build up to what they call the "eventual reclamation of the Fatherland". Whilst no one is surprised that the officials within the German government were going to try and liberate their homeland, the fact that such a plan would include an outright invasion of the Portuguese rump state has been a surprise to many. "
+  PBNews.163.a:0 "It seems that they are merely fighting for their survival"
+
+  PBNews.164.t:0 "GERMAN-PORTUGUESE ALLIANCE"
+  PBNews.164.d:0 "Citing their shared distain for those who had exiled them from their homelands, the German and Portuguese governments in exile have announced a new alliance together. The two rump state powers have promised to one day return to their countries of origin however they have announced that for now the time is not yet ripe. Massive military build ups have been seen in both nations and many are wondering if these two nations can truely return to the European continent and wipe away the power and influence of the Pacte Revanchiste."
+  PBNews.164.a:0 "United in eternal hatred for those that had done them wrong"
+
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
