--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -1057,6 +1057,18 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany_exile.2.d:0 ""
   germany_exile.2.a:0 "I see no reason why we shouldn't accept"
 
+  germany_exile.3.t:0 "Portugal accepts our proposal"
+  germany_exile.3.d:0 ""
+  germany_exile.3.a:0 "Fantastic news!"
+
+  germany_exile.4.t:0 "Germany demands our submission"
+  germany_exile.4.d:0 ""
+  germany_exile.4.a:0 "Do we have a choice?"
+
+  germany_exile.5.t:0 "Sudwestafrika bends the knee"
+  germany_exile.5.d:0 ""
+  germany_exile.5.a:0 "Their masters have returned"
+
 
 
   ##########################
