--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -644,6 +644,14 @@
   PBNews.164.d:0 "Citing their shared distain for those who had exiled them from their homelands, the German and Portuguese governments in exile have announced a new alliance together. The two rump state powers have promised to one day return to their countries of origin however they have announced that for now the time is not yet ripe. Massive military build ups have been seen in both nations and many are wondering if these two nations can truely return to the European continent and wipe away the power and influence of the Pacte Revanchiste."
   PBNews.164.a:0 "United in eternal hatred for those that had done them wrong"
 
+  PBNews.165.t:0 "SUDWESTAFRIKA SUBMITS"
+  PBNews.165.d:0 "The German delegation in London today spoke about a 'return of normalcy' within the German South-western African colony. After the German collapse and subsequent exile the colony was in a state of complete disarray with administrators being barely able to secure even the most vital of supplies for the local German and native populace. However, with the newly added assistance of the German exile goverment the colony has once again begun to resemble its pre-war self, with bountiful amounts of aid and what not making its way to the nation. Germany although broken, might just once again rebuild itself, piece by piece."
+  PBNews.165.a:0 "Can't say I'm surprised"
+
+  PBNews.166.t:0 "GERMAN-DUTCH HOSTILITIES"
+  PBNews.166.d:0 "The German government in exile has announced its intention to safeguard the Dutch exiles from foreign powers. The process of which they have said will include the stationing of German-African troops within the exiled nation. Germany has remained fervent in their opinion that this is not an invasion and simply a guarantee of peace within the continent. Whilst the Dutch have voiced their concerns over the German announcement and have pleaded for Germany to halt its aggressive practices they remain unable to put up a fight against the Germans. For now it seems these nations are allied, by both force and practicality."
+  PBNews.166.a:0 "And they say they are fighting tyrants"
+
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
