--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -1,14 +1,14 @@
 ﻿ l_english:
 
   ###GAME RULES
-  ENG_SOCIALIST_PATH:0 "A Worker's Union Victory"
-  ENG_SOCIALIST_PATH_desc:0 ""
+  RULE_OPTION_ENG_SOCIALIST_PATH:0 "A Worker's Union Victory"
+  RULE_OPTION_ENG_SOCIALIST_PATH_desc:0 ""
 
-  ENG_TORY_PATH:0 "A Tory Victory"
-  ENG_TORY_PATH_desc:0 ""
+  RULE_OPTION_ENG_TORY_PATH:0 "A Tory Victory"
+  RULE_OPTION_ENG_TORY_PATH_desc:0 ""
 
-  ENG_NPP_PATH:0 "A National People's Party Victory"
-  ENG_NPP_PATH_desc:0 ""
+  RULE_OPTION_ENG_NPP_PATH:0 "A National People's Party Victory"
+  RULE_OPTION_ENG_NPP_PATH_desc:0 ""
 
   ##########################
   # MINISTERS
