--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -1082,6 +1082,14 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany_exile.5.d:0 ""
   germany_exile.5.a:0 "Their masters have returned"
 
+  germany_exile.6.t:0 "Germany demands our submission"
+  germany_exile.6.d:0 ""
+  germany_exile.6.a:0 "Do we have a choice"
+
+  germany_exile.7.t:0 "The Dutch fold"
+  germany_exile.7.d:0 ""
+  germany_exile.7.a:0 "As they should"
+
 
 
   ##########################
