Big European load coming in

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -227,6 +227,32 @@
   ##########################
   # FOCUSES
   ##########################
+
+  #Post War Tree
+
+  PB_GER_Victory_in_Europe:0 "Victory in Europe"
+  PB_GER_Demilitarization:0 "Demilitarization"
+  PB_GER_The_German_Century:0 "The German Century"
+  PB_GER_Rejoin_The_League_Of_Nations:0 "Rejoin the League of Nations"
+  PB_GER_The_Lyon_Trials:0 "The Lyon Trials"
+  PB_GER_The_Italian_Dispute:0 "The Italian Dispute"
+  PB_GER_Victory_Rebuilding_Germany:0 "Rebuilding Germany"
+  PB_GER_Reaffirm_Ties_With_Britain:0 "Reaffirm Ties with Britain"
+  PB_GER_Rebuild_The_Rhine:0 "The Rhenish Issue"
+  PB_GER_Hunt_Down_The_Collaborators:0 "Hunt Down the Collaborators"
+  PB_GER_Status_Of_The_Empire:0 "Status of the Empire"
+  PB_GER_European_Common_Market:0 "Establish a Common German Market"
+  PB_GER_Never_Forget:0 "Never Forget"
+  PB_GER_Never_Forgive:0 "Never Forgive"
+  PB_GER_The_Franco_German_Foreign_Legion:0 "The Franco-German Foreign Legion"
+  PB_GER_The_Alsace_Issue:0 "The Alsace Issue"
+  PB_GER_Looking_Forward:0 "Looking Forward"
+  PB_GER_A_Dream_Of_A_Greater_Europe:0 "A Dream of a Greater Europe"
+
+
+
+
+  
   PB_GER_Rudolf_Crisis:0 "The Abdication Crisis"
   PB_GER_Rudolf_Crisis_desc:0 "Today, the unthinkable has happened. Kaiser Rudolf II has announced that effective immediately, he will abdicate the throne. In his old age, His Majesty feels that he can no longer properly execute the duties of the throne and the throne will soon pass to his only child, Princess Elisabeth. Though this alone would not be a great crisis for our country, the unstable nature of this all has caused Gustav Streseman and his cabinet to resign. Per the German constitution, fresh elections must be held soon to form a new government, even as the political situation has become increasingly polarized without Rudolf's guiding hand at the helm. It seems the months ahead will be a time of chaos."
   PB_GER_New_Elections:0 "Elections"
@@ -368,7 +394,6 @@
   PB_GER_Ally_with_the_KDG:0 "Creating a Culture of Development"
   PB_GER_Ally_with_Krupp:0 "Providing Corporate Subsidies"
   PB_GER_Royal_German_Coal_and_Steel:0 "Truly Industrialising the Aircraft Industry"
-  PB_GER_European_Common_Market:0 "Establish a Common German Market"
   PB_GER_Develop_Domestic_Arms:0 "Develop the Domestic Arms Industry"
   PB_GER_Expand_Heidelberg_University:0 "Expand Heidelberg University"
   PB_GER_Landship_Fleet:0 "Assisting British Walker Development"
@@ -1063,7 +1088,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   ##########################
 
   germany_exile.1.t:0 "Our Darkest Hour"
-  germany_exile.1.d:0 ""
+  germany_exile.1.d:0 ""A day will come when sacred Troy shall perish, and Priam and his people shall be slain." Scipio to his Greek mentor Polybius after the defeat of Carthage.\n\nIt is written in history that all empires will come to an end, that all things good are inherently mortal, our empire being one such thing. Frankfurt now mimics that of a descrated corpse, once beautiful and plump it now rots with a foul stench. Waiting for someone to bury it in the dirt never to be seen again. The French may either be our grave digger, or a mere passer-by, whatever the case may be one thing for sure is that we are far from home, if we can still remember what home is. With our armies beaten and our people hungary we must fight hard and die well, for there is no other choice for a dead man to do."
   germany_exile.1.a:0 "We will return to the Fatherland, no matter the cost"
 
   germany_exile.2.t:0 "Germany offers us an alliance"
@@ -1071,7 +1096,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany_exile.2.a:0 "I see no reason why we shouldn't accept"
 
   germany_exile.3.t:0 "Portugal accepts our proposal"
-  germany_exile.3.d:0 ""
+  germany_exile.3.d:0 "The Portuguese exiles have reviewed our request for an alliance and have decided to accept it on the common grounds that both nations wish to return to their homelands."
   germany_exile.3.a:0 "Fantastic news!"
 
   germany_exile.4.t:0 "Germany demands our submission"
@@ -1079,7 +1104,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany_exile.4.a:0 "Do we have a choice?"
 
   germany_exile.5.t:0 "Sudwestafrika bends the knee"
-  germany_exile.5.d:0 ""
+  germany_exile.5.d:0 "Sudwestafrika has accepted our demands, citing that they always wished to return back to germany. Their dire sitaution may be some cause of concern, especially for our already struggling economy but analysts believe the effects would only be minor. "
   germany_exile.5.a:0 "Their masters have returned"
 
   germany_exile.6.t:0 "Germany demands our submission"
@@ -1087,7 +1112,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany_exile.6.a:0 "Do we have a choice"
 
   germany_exile.7.t:0 "The Dutch fold"
-  germany_exile.7.d:0 ""
+  germany_exile.7.d:0 "The Dutch government has reluctantly accepted our demands of submission. They have made their position clear however that this occupation must be temporary and if it isn't then armed conflict would arise."
   germany_exile.7.a:0 "As they should"
 
 
@@ -1428,9 +1453,87 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
 
   GER_PEF_LIBERATION_FRONT:0 "European Liberation Front"
 
+  GER_FORMS_EUROPA:0 "The following nations will be annexed if they exist:\n\n-[DEN.GetFlag] Denmark\n-[SWE.GetFlag] Sweden\n-[NOR.GetFlag] Norway\n-[POL.GetFlag] Poland\n-[WLA.GetFlag] Wallonia\n-[HOL.GetFlag] Netherlands\n\nOverseas territories will be reformed into European mandates and the proclamation of Europa will happen"
+
   ##########################
   # COSMETIC TAGS
   ##########################
+
+ DAF_Europa_ni:0 "European Mandate of Africa"
+ DAF_Europa_ni_DEF:0 "European Mandate of Africa"
+ DAF_Europa_ds:0 "European Mandate of Africa"
+ DAF_Europa_ds_DEF:0 "European Mandate of Africa"
+ DAF_Europa_rc:0 "European Mandate of Africa"
+ DAF_Europa_rc_DEF:0 "European Mandate of Africa"
+ DAF_Europa_an:0 "European Mandate of Africa"
+ DAF_Europa_an_DEF:0 "European Mandate of Africa"
+ DAF_Europa_cn:0 "European Mandate of Africa"
+ DAF_Europa_cn_DEF:0 "European Mandate of Africa"
+ DAF_Europa_lb:0 "European Mandate of Africa"
+ DAF_Europa_lb_DEF:0 "European Mandate of Africa"
+ DAF_Europa_ss:0 "European Mandate of Africa"
+ DAF_Europa_ss_DEF:0 "European Mandate of Africa"
+ DAF_Europa_jc:0 "European Mandate of Africa"
+ DAF_Europa_jc_DEF:0 "European Mandate of Africa"
+ DAF_Europa_ni_ADJ:0 "Afro-European"
+ DAF_Europa_rc_ADJ:0 "Afro-European"
+ DAF_Europa_lb_ADJ:0 "Afro-European"
+ DAF_Europa_ss_ADJ:0 "Afro-European"
+ DAF_Europa_jc_ADJ:0 "Afro-European"
+ DAF_Europa_ds_ADJ:0 "Afro-European"
+ DAF_Europa_cn_ADJ:0 "Afro-European"
+ DAF_Europa_an_ADJ:0 "Afro-European"
+
+ DAS_Europa_ni:0 "European Mandate of East-Asia"
+ DAS_Europa_ni_DEF:0 "European Mandate of East-Asia"
+ DAS_Europa_ds:0 "European Mandate of East-Asia"
+ DAS_Europa_ds_DEF:0 "European Mandate of East-Asia"
+ DAS_Europa_rc:0 "European Mandate of East-Asia"
+ DAS_Europa_rc_DEF:0 "European Mandate of East-Asia"
+ DAS_Europa_an:0 "European Mandate of East-Asia"
+ DAS_Europa_an_DEF:0 "European Mandate of East-Asia"
+ DAS_Europa_cn:0 "European Mandate of East-Asia"
+ DAS_Europa_cn_DEF:0 "European Mandate of East-Asia"
+ DAS_Europa_lb:0 "European Mandate of East-Asia"
+ DAS_Europa_lb_DEF:0 "European Mandate of East-Asia"
+ DAS_Europa_ss:0 "European Mandate of East-Asia"
+ DAS_Europa_ss_DEF:0 "European Mandate of East-Asia"
+ DAS_Europa_jc:0 "European Mandate of East-Asia"
+ DAS_Europa_jc_DEF:0 "European Mandate of East-Asia"
+ DAS_Europa_ni_ADJ:0 "Eurasian"
+ DAS_Europa_rc_ADJ:0 "Eurasian"
+ DAS_Europa_lb_ADJ:0 "Eurasian"
+ DAS_Europa_ss_ADJ:0 "Eurasian"
+ DAS_Europa_jc_ADJ:0 "Eurasian"
+ DAS_Europa_ds_ADJ:0 "Eurasian"
+ DAS_Europa_cn_ADJ:0 "Eurasian"
+ DAS_Europa_an_ADJ:0 "Eurasian"
+
+ GER_Europa_ni:0 "Federated States of Europa"
+ GER_Europa_ni_DEF:0 "Federated States of Europa"
+ GER_Europa_ds:0 "Federated States of Europa"
+ GER_Europa_ds_DEF:0 "Federated States of Europa"
+ GER_Europa_rc:0 "Federated States of Europa"
+ GER_Europa_rc_DEF:0 "Federated States of Europa"
+ GER_Europa_an:0 "Federated States of Europa"
+ GER_Europa_an_DEF:0 "Federated States of Europa"
+ GER_Europa_cn:0 "Federated States of Europa"
+ GER_Europa_cn_DEF:0 "Federated States of Europa"
+ GER_Europa_lb:0 "Federated States of Europa"
+ GER_Europa_lb_DEF:0 "Federated States of Europa"
+ GER_Europa_ss:0 "Federated States of Europa"
+ GER_Europa_ss_DEF:0 "Federated States of Europa"
+ GER_Europa_jc:0 "Federated States of Europa"
+ GER_Europa_jc_DEF:0 "Federated States of Europa"
+ GER_Europa_ni_ADJ:0 "European"
+ GER_Europa_rc_ADJ:0 "European"
+ GER_Europa_lb_ADJ:0 "European"
+ GER_Europa_ss_ADJ:0 "European"
+ GER_Europa_jc_ADJ:0 "European"
+ GER_Europa_ds_ADJ:0 "European"
+ GER_Europa_cn_ADJ:0 "European"
+ GER_Europa_an_ADJ:0 "European"
+
 
  GER_Federation_ni:0 "German Federation"
  GER_Federation_ni_DEF:0 "German Federation"
