--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -652,6 +652,10 @@
   PBNews.166.d:0 "The German government in exile has announced its intention to safeguard the Dutch exiles from foreign powers. The process of which they have said will include the stationing of German-African troops within the exiled nation. Germany has remained fervent in their opinion that this is not an invasion and simply a guarantee of peace within the continent. Whilst the Dutch have voiced their concerns over the German announcement and have pleaded for Germany to halt its aggressive practices they remain unable to put up a fight against the Germans. For now it seems these nations are allied, by both force and practicality."
   PBNews.166.a:0 "And they say they are fighting tyrants"
 
+  PBNews.167.t:0 "EUROPA UNITES"
+  PBNews.167.d:0 "The city of Frankfurt was in jubilation today as the German government announced the formation of a new united Europe which consisted of Germany itself, the Lowlands, Poland, and Scandinavia. These nations have put aside their cultural and political differences in the pursuit of establishing a better defended Europe. Some nations such as the historically neutral Switzerland have announced their wishes to join this Pan-European state. The United Kingdom has stated that it welcomes this new political entity and wishes to continue the positive relations that it had with its forebearer Germany."
+  PBNews.167.a:0 "A united Europe is the greatest weapon the globe has ever laid witness to."
+
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
