--- a/localisation/english/PB_autonomy_l_english.yml
+++ b/localisation/english/PB_autonomy_l_english.yml
@@ -26,5 +26,7 @@
 
  autonomy_PB_Garrison_State:0 "Garrison State"
 
+ autonomy_PB_European_Mandate:0 "European Mandate"
+
  PB_can_raise_autonomy_level:0 "Can Raise Autonomy Level"
  PB_can_lose_autonomy_level:0 "Can Lower Autonomy Level"
