--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -22,6 +22,7 @@
  VICTORY_POINTS_9517:0 "Stuttgart"
  VICTORY_POINTS_3530:0 "Karlsruhe"
  VICTORY_POINTS_11560:0 "Mainz"
+ VICTORY_POINTS_3583:0 "Ostrau"
  VICTORY_POINTS_708:0 "Augsburg"
  VICTORY_POINTS_11544:0 "Nürnberg"
  VICTORY_POINTS_9515:0 "Regensburg"
