--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -676,7 +676,7 @@ PB_GER_the_ashanti_purchase:0 "The Ashanti Purchase"
 PB_GER_the_ashanti_purchase_desc:0 ""
 PB_GER_kongo_resource_rights:0 "Kongo Resource Rights"
 PB_GER_kongo_resource_rights_desc:0 ""
-PB_GER_establish_german_west_afrika:0 "Establish German West Afrika"
+PB_GER_establish_german_west_afrika:0 "Modernize Colonial Armed Forces"
 PB_GER_establish_german_west_afrika_desc:0 ""
 PB_GER_the_kaiserliche_conference:0 "The Kaiserliche Conference"
 PB_GER_the_kaiserliche_conference_desc:0 ""
