--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -1,5 +1,8 @@
 ﻿ l_english:
 
+  ###Topbar
+  ENG_Country_Desc_Topbar:0 "§YFeatures:§!\n    - Maintain Britain's vast empire\n    - Guide Westminster through the 20th century\n    - Crush the Frankish foe\n    - Manage the London Sprawl\n    - Deal with the London market crash\n    - Continue the Pax Britannica\n\n§YSituation:§!\nThe United Kingdom is the dominant world power in 1933.\n\n A victor in the Great War, Britain retreated into isolationism with the postwar §Y"Long Depression"§! that gripped the global economy. Propping itself up with inter-empire trade, the United Kingdom and her §YImperial Confederation§! have weathered the storm of the interwar relatively unscathed. However, vast speculation bubbles, unstable currency and growing global discontent threaten to undermine Britain's Empire, particularly as tensions continue to rise with the up-and-coming §YAmerican Commonwealth§!.\n\n The United Kingdom now faces threats from a resurgent France and Russia, eager to settle the score from the Great War, as well as conflict within their increasingly precarious Empire and the nation itself.\n\n The United Kingdom is a §YGreat Power§!.\n\n"
+
   ###GAME RULES
   RULE_OPTION_ENG_SOCIALIST_PATH:0 "A Worker's Union Victory"
   RULE_OPTION_ENG_SOCIALIST_PATH_desc:0 ""
