--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -654,7 +654,15 @@
 
   PBNews.167.t:0 "EUROPA UNITES"
   PBNews.167.d:0 "The city of Frankfurt was in jubilation today as the German government announced the formation of a new united Europe which consisted of Germany itself, the Lowlands, Poland, and Scandinavia. These nations have put aside their cultural and political differences in the pursuit of establishing a better defended Europe. Some nations such as the historically neutral Switzerland have announced their wishes to join this Pan-European state. The United Kingdom has stated that it welcomes this new political entity and wishes to continue the positive relations that it had with its forebearer Germany."
-  PBNews.167.a:0 "A united Europe is the greatest weapon the globe has ever laid witness to."
+  PBNews.167.a:0 "A united Europe is the greatest weapon the globe has ever laid witness to"
+
+  PBNews.168.t:0 "CLAIMING THE MANTLE"
+  PBNews.168.d:0 "The United Commonwealth addressed the Imperial Confederation in an emergency meeting today within the city of Philadelphia. It made clear of its intentions to one day liberate Europe from the yoke of Neo-Imperialist tyranny whilst also claiming 'the mantel of the former British Empire'. The topic of continuing the war with the Pacte Revanchist was brought up numerous times but American officials were quick to shut down the idea, stating that it would be best if the alliance builds its strength up and strikes when the time is right. Major General Eisenhower stole the show with his closing statement "Tonight a son mourns the death of his much beloved father". "
+  PBNews.168.a:0 "Britain may be dead but democracy lives on"
+
+  PBNews.169.t:0 "FAR FROM HOME"
+  PBNews.169.d:0 "Following the American proclamation as the heirs of the British Empire many Anglo officials took an openly aggresive stance towards such a notion, stating that the empire, although weakened and divided still lived on in the mainly isolated British colonies of the Green Sahara. American politicians were apperently dumb founded that the king, who had reported to be on his way to the United Commonwealth, instead redirected his voyage to the dominions in Africa. His majesty then proceeded to proclaim a British government in exile much like the Germans once had done. The king was apparently hit by artilley shrapnel during his evacuation but is still alive and stable."
+  PBNews.169.a:0 "Nothing lasts forever"
 
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
