German Colonial Tree DONE OH MY GOD

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -1076,6 +1076,12 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.152.a:0 "We are in a dire need of few new pounds."
   germany.152.b:0 "The British Empire will not decline in size!"
 
+
+  germany.155.t:0 "The Issues of the Colonies"
+  germany.155.d:0 "The New Kaiserliche Conference focusing on discussing the status of the Empire revealed a great deal of information to the politicians and lawmakers in Berlin, mostly negative.\n\nThe State of the Modernization and Development Empire's Colonies is marginal at best.Despite great promises in the last years, the planned education reforms and building of schools in Africa only saw minimal progress at best. The rampant illiteracy inside the colonies has improved very little.\nFurthermore the treatment of the African Workers is still subhuman. Standardized Working Conditions have not been implemented and in several places Africans are forced to work for entire days with no rest bordering Slavery. This practice does not even really benefit the Empire economicially it hinders the progression of its potential working class and only helps to increase the pockets of African Landlords.\nLastly the greatest issue plagueing all colonies has been a severe need of bureaucracy. Administral region are in several regions not clearly defined, neither their rules, functions, powers or whatever. Everywhere lawmakers are missing to handle corruption and oversee the progression of development. While reading through the reports, one gets the impression that we sometimes do not even know what kind of lands we actually control!\n\nHowever while the discorveries of the Conference were gut-wrenching to resolve to fix these issues have never been higher. Germany needs to compete with all Great Powers in the world and for that we need a stable realm. Yes the costs of improving all these issues are high but those are the burderns we have to bear for our Empire."
+  germany.155.a:0 "The Costs of an Empire"
+
+
   germany.180.t:0 "German Africa - A Continent of Opportunities"
   germany.180.d:0 ""
   germany.180.a:0 "We have to stand together against the oncoming storm."
