--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -353,7 +353,7 @@
   PBNews.91.a:0 "A fascinating tale for the modern age of exploration!"
 
   PBNews.92.t:0 "PAX AMERICANA SETS RECORDS"
-  PBNews.92.d:0 "Newstands bustle today as a tale rivets the people of America. Written by an American named Elion Mimiovich, Pax Americana is set in timeline where America declares its independence from The United Kingdom. The loss of America leads to the creation of a Jacobin British state. America then forms an alliance with France and Spain called The Atlantic Coalition. Meanwhile, the British Republic grows closer to Russia And Germany, which fall to similar Jacobin governments and form an alliance called The Northern League. The book culminates in the beginning of The Great War. Critics note absurd plot elements like that Tesla and Edison's inventions never occur and that America would never abandon Britain."
+  PBNews.92.d:0 "Newstands bustle today as a tale rivets the people of America. Written by an American named Elion Mimiovich, Pax Americana is set in timeline where America declares its independence from The United Kingdom. The loss of America leads to the creation of a Jacobin British state. America then forms an alliance with France and Spain called The Atlantic Coalition. Meanwhile, the British Republic grows closer to Russia and Germany, which fall to similar Jacobin governments and form an alliance called The Northern League. The book culminates in the beginning of The Great War. Critics note absurd plot elements like that Tesla and Edison's genius never occur and America never abandons Britain."
   PBNews.92.a:0 "Since When Did Alternative History Become Profitable?"
 
   PBNews.93.t:0 "KÖLNER BC 01 VICTORY"
@@ -573,7 +573,7 @@
   PBNews.146.a:0 "Life uh.... finds a way"
 
   PBNews.147.t:0 "WORLD'S FAIR IN BUENOS AIRES"
-  PBNews.147.d:0 ""
+  PBNews.147.d:0 "Gather around people of the world, the wonders of the world are shown here in Buenos Aires. All the sciences and brains are coming together here in peace, to share their knowledge with the world.From America to the outer islands of New Zealand, and from the gates of Beijing to London.\n\Although Britain has been doing rather well, technology wise, these last few decades.This year however, Britain's position is being challenged, everywhere around the globe new tech and ideas have evolved.\n\The Brits have welcomed this competition with open arms, as they feel it is important the world develops together.\n\The past of the World Fairs has been full of evolution, eurekas and oddities.\n\Let's wonder and see what comes out of it this year. "
   PBNews.147.a:0 "How fascinating"
 
   PBNews.148.t:0 "ALEXEI TRIUMPHANT" #old
