--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -1213,11 +1213,11 @@
   britain.67.a:0 "Damn."
 
   britain.68.t:0 "Mosley proves his worth"
-  britain.68.d:0 "PLACEHOLDER Pollitt begins pandering to Mosley to draw his support to the hardliner faction as he begins his plan to oust Attlee and become prime minister"
+  britain.68.d:0 "Deer flock into valleys, plans brew, and minds ponder, and specifically Pollitts mind ponders about discussing business with a certain Oswald Mosley to drag support to the hardliner faction. Together they will begin to formulate a plan to oust Atlee from his position, and bring themselves upon the level of prime minister."
   britain.68.a:0 "Perhaps he may prove some use to us."
 
   britain.69.t:0 "Experimenting with Communes"
-  britain.69.d:0 "PLACEHOLDER Gallacher convinces Attlee to allow some limited experiments with small anarchist communes throughout Britain, bringing back mixed results"
+  britain.69.d:0 "Someone opens a door, walks into a room, sits down, turns on a radio and hears:/n/Welcome to the 6 o-clock news, this week's biggest news is straight from the top, Gallacher and Attlee had announced to do some limited experiments with small anarchist communes in Britain. These have already shown to be a success in Japan, and so the government wants to try the same strategy here./n/Thus far 3 have been set up with moderate success, but all throughout Britain negative feedback has been drowning out the media all week, there is also outright opposition from all sides of the spectrum, even from Atlees own party members./n/Despite all this the government is going to keep pushing their agenda and will keep setting up more communes. And for other news tonight…"
   britain.69.a:0 "Maybe it's more of a Japanese thing."
 
   britain.70.t:0 "Bringing a Light to the Empire"
